cs101_information_objects.h

/**
 * \file cs101_information_objects.h
 * \brief Functions for CS101/CS104 information objects
 * These are the implementation of the different data types and message types
 */

/**
 * @defgroup COMMON Common API functions
 *
 * @{
 */

/**
 * \brief Message type IDs
 */
typedef enum {
    M_SP_NA_1 = 1,
    M_SP_TA_1 = 2,
    M_DP_NA_1 = 3,
    M_DP_TA_1 = 4,
    M_ST_NA_1 = 5,
    M_ST_TA_1 = 6,
    M_BO_NA_1 = 7,
    M_BO_TA_1 = 8,
    M_ME_NA_1 = 9,
    M_ME_TA_1 = 10,
    M_ME_NB_1 = 11,
    M_ME_TB_1 = 12,
    M_ME_NC_1 = 13,
    M_ME_TC_1 = 14,
    M_IT_NA_1 = 15,
    M_IT_TA_1 = 16,
    M_EP_TA_1 = 17,
    M_EP_TB_1 = 18,
    M_EP_TC_1 = 19,
    M_PS_NA_1 = 20,
    M_ME_ND_1 = 21,
    M_SP_TB_1 = 30,
    M_DP_TB_1 = 31,
    M_ST_TB_1 = 32,
    M_BO_TB_1 = 33,
    M_ME_TD_1 = 34,
    M_ME_TE_1 = 35,
    M_ME_TF_1 = 36,
    M_IT_TB_1 = 37,
    M_EP_TD_1 = 38,
    M_EP_TE_1 = 39,
    M_EP_TF_1 = 40,
    C_SC_NA_1 = 45,
    C_DC_NA_1 = 46,
    C_RC_NA_1 = 47,
    C_SE_NA_1 = 48,
    C_SE_NB_1 = 49,
    C_SE_NC_1 = 50,
    C_BO_NA_1 = 51,
    C_SC_TA_1 = 58,
    C_DC_TA_1 = 59,
    C_RC_TA_1 = 60,
    C_SE_TA_1 = 61,
    C_SE_TB_1 = 62,
    C_SE_TC_1 = 63,
    C_BO_TA_1 = 64,
    M_EI_NA_1 = 70,
    C_IC_NA_1 = 100,
    C_CI_NA_1 = 101,
    C_RD_NA_1 = 102,
    C_CS_NA_1 = 103,
    C_TS_NA_1 = 104,
    C_RP_NA_1 = 105,
    C_CD_NA_1 = 106,
    C_TS_TA_1 = 107,
    P_ME_NA_1 = 110,
    P_ME_NB_1 = 111,
    P_ME_NC_1 = 112,
    P_AC_NA_1 = 113,
    F_FR_NA_1 = 120,
    F_SR_NA_1 = 121,
    F_SC_NA_1 = 122,
    F_LS_NA_1 = 123,
    F_AF_NA_1 = 124,
    F_SG_NA_1 = 125,
    F_DR_TA_1 = 126,
    F_SC_NB_1 = 127
} IEC60870_5_TypeID;
/**
 *  \brief Qualifier of parameter of measured values (QPM) according to IEC 60870-5-101:2003 7.2.6.24
 *
 *  Possible values:
 *  0 = not used
 *  1 = threshold value
 *  2 = smoothing factor (filter time constant)
 *  3 = low limit for transmission of measured values
 *  4 = high limit for transmission of measured values
 *  5..31 = reserved for standard definitions of CS101 (compatible range)
 *  32..63 = reserved for special use (private range)
 */
typedef uint8_t QualifierOfParameterMV;
/**
 * \brief Regulating step command state (RCS) according to IEC 60870-5-101:2003 7.2.6.17
 */
typedef enum {
    IEC60870_STEP_INVALID_0 = 0,
    IEC60870_STEP_LOWER = 1,
    IEC60870_STEP_HIGHER = 2,
    IEC60870_STEP_INVALID_3 = 3
} StepCommandValue;
/************************************************
 * InformationObject
 ************************************************/

typedef struct sInformationObject* InformationObject;
/**********************************************
 * MeasuredValueNormalized
 **********************************************/

typedef struct sMeasuredValueNormalized* MeasuredValueNormalized;
/*******************************************
 * MeasuredValueScaled : InformationObject
 *******************************************/

typedef struct sMeasuredValueScaled* MeasuredValueScaled;
/*******************************************
 * DoubleCommand : InformationObject
 *******************************************/

typedef struct sDoubleCommand* DoubleCommand;
/**
 * \brief Create a double command information object
 *
 * \param[in] self existing instance to reuse or NULL to create a new instance
 * \param[in] ioa information object address
 * \param[in] command the double command state (0 = not permitted, 1 = off, 2 = on, 3 = not permitted)
 * \param[in] selectCommand (S/E bit) if true send "select", otherwise "execute"
 * \param[in] qu qualifier of command QU parameter(0 = no additional definition, 1 = short pulse, 2 = long pulse, 3 = persistent output)
 *
 * \return the initialized instance
 */
DoubleCommand
DoubleCommand_create(DoubleCommand self, int ioa, int command, bool selectCommand, int qu);
/**
 * \brief Get the qualifier of command QU value
 *
 * \return the QU value (0 = no additional definition, 1 = short pulse, 2 = long pulse, 3 = persistent output, > 3 = reserved)
 */
int
DoubleCommand_getQU(DoubleCommand self);
/**
 * \brief Get the state (command) value
 *
 * \return 0 = not permitted, 1 = off, 2 = on, 3 = not permitted
 */
int
DoubleCommand_getState(DoubleCommand self);
/**
 * \brief Return the value of the S/E bit of the qualifier of command
 *
 * \return S/E bit, true = select, false = execute
 */
bool
DoubleCommand_isSelect(DoubleCommand self);
/*******************************************
 * StepCommand : InformationObject
 *******************************************/

typedef struct sStepCommand* StepCommand;
void
StepCommand_destroy(StepCommand self);
StepCommand
StepCommand_create(StepCommand self, int ioa, StepCommandValue command, bool selectCommand, int qu);
/**
 * \brief Get the qualifier of command QU value
 *
 * \return the QU value (0 = no additional definition, 1 = short pulse, 2 = long pulse, 3 = persistent output, > 3 = reserved)
 */
int
StepCommand_getQU(StepCommand self);
StepCommandValue
StepCommand_getState(StepCommand self);
/**
 * \brief Return the value of the S/E bit of the qualifier of command
 *
 * \return S/E bit, true = select, false = execute
 */
bool
StepCommand_isSelect(StepCommand self);
/*************************************************
 * SetpointCommandNormalized : InformationObject
 ************************************************/

typedef struct sSetpointCommandNormalized* SetpointCommandNormalized;
void
SetpointCommandNormalized_destroy(SetpointCommandNormalized self);
/**
 * \brief Create a normalized set point command information object
 *
 * \param[in] self existing instance to reuse or NULL to create a new instance
 * \param[in] ioa information object address
 * \param[in] value normalized value between -1 and 1
 * \param[in] selectCommand (S/E bit) if true send "select", otherwise "execute"
 * \param[in] ql qualifier of set point command (0 = standard, 1..127 = reserved)
 *
 * \return the initialized instance
 */
SetpointCommandNormalized
SetpointCommandNormalized_create(SetpointCommandNormalized self, int ioa, float value, bool selectCommand, int ql);
float
SetpointCommandNormalized_getValue(SetpointCommandNormalized self);
int
SetpointCommandNormalized_getQL(SetpointCommandNormalized self);
/**
 * \brief Return the value of the S/E bit of the qualifier of command
 *
 * \return S/E bit, true = select, false = execute
 */
bool
SetpointCommandNormalized_isSelect(SetpointCommandNormalized self);
/*************************************************
 * SetpointCommandScaled : InformationObject
 ************************************************/

typedef struct sSetpointCommandScaled* SetpointCommandScaled;
void
SetpointCommandScaled_destroy(SetpointCommandScaled self);
/**
 * \brief Create a scaled set point command information object
 *
 * \param[in] self existing instance to reuse or NULL to create a new instance
 * \param[in] ioa information object address
 * \param[in] value the scaled value (–32.768 .. 32.767)
 * \param[in] selectCommand (S/E bit) if true send "select", otherwise "execute"
 * \param[in] ql qualifier of set point command (0 = standard, 1..127 = reserved)
 *
 * \return the initialized instance
 */
SetpointCommandScaled
SetpointCommandScaled_create(SetpointCommandScaled self, int ioa, int value, bool selectCommand, int ql);
int
SetpointCommandScaled_getValue(SetpointCommandScaled self);
int
SetpointCommandScaled_getQL(SetpointCommandScaled self);
/**
 * \brief Return the value of the S/E bit of the qualifier of command
 *
 * \return S/E bit, true = select, false = execute
 */
bool
SetpointCommandScaled_isSelect(SetpointCommandScaled self);
/*************************************************
 * SetpointCommandShort: InformationObject
 ************************************************/

typedef struct sSetpointCommandShort* SetpointCommandShort;
void
SetpointCommandShort_destroy(SetpointCommandShort self);
/**
 * \brief Create a short floating point set point command information object
 *
 * \param[in] self existing instance to reuse or NULL to create a new instance
 * \param[in] ioa information object address
 * \param[in] value short floating point number
 * \param[in] selectCommand (S/E bit) if true send "select", otherwise "execute"
 * \param[in] ql qualifier of set point command (0 = standard, 1..127 = reserved)
 *
 * \return the initialized instance
 */
SetpointCommandShort
SetpointCommandShort_create(SetpointCommandShort self, int ioa, float value, bool selectCommand, int ql);
float
SetpointCommandShort_getValue(SetpointCommandShort self);
int
SetpointCommandShort_getQL(SetpointCommandShort self);
/**
 * \brief Return the value of the S/E bit of the qualifier of command
 *
 * \return S/E bit, true = select, false = execute
 */
bool
SetpointCommandShort_isSelect(SetpointCommandShort self);
/*************************************************
 * Bitstring32Command : InformationObject
 ************************************************/

typedef struct sBitstring32Command* Bitstring32Command;
Bitstring32Command
Bitstring32Command_create(Bitstring32Command self, int ioa, uint32_t value);
void
Bitstring32Command_destroy(Bitstring32Command self);
uint32_t
Bitstring32Command_getValue(Bitstring32Command self);
/*************************************************
 * InterrogationCommand : InformationObject
 ************************************************/

typedef struct sInterrogationCommand* InterrogationCommand;
InterrogationCommand
InterrogationCommand_create(InterrogationCommand self, int ioa, uint8_t qoi);
void
InterrogationCommand_destroy(InterrogationCommand self);
uint8_t
InterrogationCommand_getQOI(InterrogationCommand self);
/*************************************************
 * ReadCommand : InformationObject
 ************************************************/

typedef struct sReadCommand* ReadCommand;
ReadCommand
ReadCommand_create(ReadCommand self, int ioa);
void
ReadCommand_destroy(ReadCommand self);
/***************************************************
 * ClockSynchronizationCommand : InformationObject
 **************************************************/

typedef struct sClockSynchronizationCommand* ClockSynchronizationCommand;
ClockSynchronizationCommand
ClockSynchronizationCommand_create(ClockSynchronizationCommand self, int ioa, CP56Time2a timestamp);
void
ClockSynchronizationCommand_destroy(ClockSynchronizationCommand self);
CP56Time2a
ClockSynchronizationCommand_getTime(ClockSynchronizationCommand self);
/******************************************************
 * ParameterNormalizedValue : MeasuredValueNormalized
 *****************************************************/

typedef struct sMeasuredValueNormalized* ParameterNormalizedValue;
void
ParameterNormalizedValue_destroy(ParameterNormalizedValue self);
/**
 * \brief Create a parameter measured values, normalized (P_ME_NA_1) information object
 *
 * NOTE: Can only be used in control direction (with COT=ACTIVATION) or in monitoring
 * direction as a response of an interrogation request (with COT=INTERROGATED_BY...).
 *
 * Possible values of qpm:
 * 0 = not used
 * 1 = threshold value
 * 2 = smoothing factor (filter time constant)
 * 3 = low limit for transmission of measured values
 * 4 = high limit for transmission of measured values
 * 5..31 = reserved for standard definitions of CS101 (compatible range)
 * 32..63 = reserved for special use (private range)
 *
 * \param[in] self existing instance to reuse or NULL to create a new instance
 * \param[in] ioa information object address
 * \param[in] value the normalized value (-1 .. 1)
 * \param[in] qpm qualifier of measured values (\ref QualifierOfParameterMV)
 *
 * \return the initialized instance
 */
ParameterNormalizedValue
ParameterNormalizedValue_create(ParameterNormalizedValue self, int ioa, float value, QualifierOfParameterMV qpm);
float
ParameterNormalizedValue_getValue(ParameterNormalizedValue self);
void
ParameterNormalizedValue_setValue(ParameterNormalizedValue self, float value);
/**
 * \brief Returns the qualifier of measured values (QPM)
 *
 * \return the QPM value (\ref QualifierOfParameterMV)
 */
QualifierOfParameterMV
ParameterNormalizedValue_getQPM(ParameterNormalizedValue self);
/******************************************************
 * ParameterScaledValue : MeasuredValueScaled
 *****************************************************/

typedef struct sMeasuredValueScaled* ParameterScaledValue;