cs101_information_objects.nim


proc DoubleCommand_create*(self: DoubleCommand; ioa: cint; command: cint;
                          selectCommand: bool; qu: cint): DoubleCommand {.
    importc: "DoubleCommand_create",  cdecl.}
## *
##  \brief Get the qualifier of command QU value
##
##  \return the QU value (0 = no additional definition, 1 = short pulse, 2 = long pulse, 3 = persistent output, > 3 = reserved)
##

proc DoubleCommand_getQU*(self: DoubleCommand): cint {.
    importc: "DoubleCommand_getQU",  cdecl.}
## *
##  \brief Get the state (command) value
##
##  \return 0 = not permitted, 1 = off, 2 = on, 3 = not permitted
##

proc DoubleCommand_getState*(self: DoubleCommand): cint {.
    importc: "DoubleCommand_getState",  cdecl.}
## *
##  \brief Return the value of the S/E bit of the qualifier of command
##
##  \return S/E bit, true = select, false = execute
##

proc DoubleCommand_isSelect*(self: DoubleCommand): bool {.
    importc: "DoubleCommand_isSelect",  cdecl.}
## ******************************************
##  StepCommand : InformationObject
## *****************************************

type
  StepCommand* = ptr sStepCommand

proc StepCommand_destroy*(self: StepCommand) {.importc: "StepCommand_destroy",
     cdecl.}
proc StepCommand_create*(self: StepCommand; ioa: cint; command: StepCommandValue;
                        selectCommand: bool; qu: cint): StepCommand {.
    importc: "StepCommand_create",  cdecl.}
## *
##  \brief Get the qualifier of command QU value
##
##  \return the QU value (0 = no additional definition, 1 = short pulse, 2 = long pulse, 3 = persistent output, > 3 = reserved)
##

proc StepCommand_getQU*(self: StepCommand): cint {.importc: "StepCommand_getQU",
     cdecl.}
proc StepCommand_getState*(self: StepCommand): StepCommandValue {.
    importc: "StepCommand_getState",  cdecl.}
## *
##  \brief Return the value of the S/E bit of the qualifier of command
##
##  \return S/E bit, true = select, false = execute
##

proc StepCommand_isSelect*(self: StepCommand): bool {.
    importc: "StepCommand_isSelect",  cdecl.}
## ************************************************
##  SetpointCommandNormalized : InformationObject
## **********************************************

type
  SetpointCommandNormalized* = ptr sSetpointCommandNormalized

proc SetpointCommandNormalized_destroy*(self: SetpointCommandNormalized) {.
    importc: "SetpointCommandNormalized_destroy",  cdecl.}
## *
##  \brief Create a normalized set point command information object
##
##  \param[in] self existing instance to reuse or NULL to create a new instance
##  \param[in] ioa information object address
##  \param[in] value normalized value between -1 and 1
##  \param[in] selectCommand (S/E bit) if true send "select", otherwise "execute"
##  \param[in] ql qualifier of set point command (0 = standard, 1..127 = reserved)
##
##  \return the initialized instance
##

proc SetpointCommandNormalized_create*(self: SetpointCommandNormalized; ioa: cint;
                                      value: cfloat; selectCommand: bool; ql: cint): SetpointCommandNormalized {.
    importc: "SetpointCommandNormalized_create",  cdecl.}
proc SetpointCommandNormalized_getValue*(self: SetpointCommandNormalized): cfloat {.
    importc: "SetpointCommandNormalized_getValue",  cdecl.}
proc SetpointCommandNormalized_getQL*(self: SetpointCommandNormalized): cint {.
    importc: "SetpointCommandNormalized_getQL",  cdecl.}
## *
##  \brief Return the value of the S/E bit of the qualifier of command
##
##  \return S/E bit, true = select, false = execute
##

proc SetpointCommandNormalized_isSelect*(self: SetpointCommandNormalized): bool {.
    importc: "SetpointCommandNormalized_isSelect",  cdecl.}
## ************************************************
##  SetpointCommandScaled : InformationObject
## **********************************************

type
  SetpointCommandScaled* = ptr sSetpointCommandScaled

proc SetpointCommandScaled_destroy*(self: SetpointCommandScaled) {.
    importc: "SetpointCommandScaled_destroy",  cdecl.}
## *
##  \brief Create a scaled set point command information object
##
##  \param[in] self existing instance to reuse or NULL to create a new instance
##  \param[in] ioa information object address
##  \param[in] value the scaled value (–32.768 .. 32.767)
##  \param[in] selectCommand (S/E bit) if true send "select", otherwise "execute"
##  \param[in] ql qualifier of set point command (0 = standard, 1..127 = reserved)
##
##  \return the initialized instance
##

proc SetpointCommandScaled_create*(self: SetpointCommandScaled; ioa: cint;
                                  value: cint; selectCommand: bool; ql: cint): SetpointCommandScaled {.
    importc: "SetpointCommandScaled_create",  cdecl.}
proc SetpointCommandScaled_getValue*(self: SetpointCommandScaled): cint {.
    importc: "SetpointCommandScaled_getValue",  cdecl.}
proc SetpointCommandScaled_getQL*(self: SetpointCommandScaled): cint {.
    importc: "SetpointCommandScaled_getQL",  cdecl.}
## *
##  \brief Return the value of the S/E bit of the qualifier of command
##
##  \return S/E bit, true = select, false = execute
##

proc SetpointCommandScaled_isSelect*(self: SetpointCommandScaled): bool {.
    importc: "SetpointCommandScaled_isSelect",  cdecl.}
## ************************************************
##  SetpointCommandShort: InformationObject
## **********************************************

type
  SetpointCommandShort* = ptr sSetpointCommandShort

proc SetpointCommandShort_destroy*(self: SetpointCommandShort) {.
    importc: "SetpointCommandShort_destroy",  cdecl.}
## *
##  \brief Create a short floating point set point command information object
##
##  \param[in] self existing instance to reuse or NULL to create a new instance
##  \param[in] ioa information object address
##  \param[in] value short floating point number
##  \param[in] selectCommand (S/E bit) if true send "select", otherwise "execute"
##  \param[in] ql qualifier of set point command (0 = standard, 1..127 = reserved)
##
##  \return the initialized instance
##

proc SetpointCommandShort_create*(self: SetpointCommandShort; ioa: cint;
                                 value: cfloat; selectCommand: bool; ql: cint): SetpointCommandShort {.
    importc: "SetpointCommandShort_create",  cdecl.}
proc SetpointCommandShort_getValue*(self: SetpointCommandShort): cfloat {.
    importc: "SetpointCommandShort_getValue",  cdecl.}
proc SetpointCommandShort_getQL*(self: SetpointCommandShort): cint {.
    importc: "SetpointCommandShort_getQL",  cdecl.}
## *
##  \brief Return the value of the S/E bit of the qualifier of command
##
##  \return S/E bit, true = select, false = execute
##

proc SetpointCommandShort_isSelect*(self: SetpointCommandShort): bool {.
    importc: "SetpointCommandShort_isSelect",  cdecl.}
## ************************************************
##  Bitstring32Command : InformationObject
## **********************************************

type
  Bitstring32Command* = ptr sBitstring32Command

proc Bitstring32Command_create*(self: Bitstring32Command; ioa: cint; value: uint32_t): Bitstring32Command {.
    importc: "Bitstring32Command_create",  cdecl.}
proc Bitstring32Command_destroy*(self: Bitstring32Command) {.
    importc: "Bitstring32Command_destroy",  cdecl.}
proc Bitstring32Command_getValue*(self: Bitstring32Command): uint32_t {.
    importc: "Bitstring32Command_getValue",  cdecl.}
## ************************************************
##  InterrogationCommand : InformationObject
## **********************************************

type
  InterrogationCommand* = ptr sInterrogationCommand

proc InterrogationCommand_create*(self: InterrogationCommand; ioa: cint; qoi: uint8_t): InterrogationCommand {.
    importc: "InterrogationCommand_create",  cdecl.}
proc InterrogationCommand_destroy*(self: InterrogationCommand) {.
    importc: "InterrogationCommand_destroy",  cdecl.}
proc InterrogationCommand_getQOI*(self: InterrogationCommand): uint8_t {.
    importc: "InterrogationCommand_getQOI",  cdecl.}
## ************************************************
##  ReadCommand : InformationObject
## **********************************************

type
  ReadCommand* = ptr sReadCommand

proc ReadCommand_create*(self: ReadCommand; ioa: cint): ReadCommand {.
    importc: "ReadCommand_create",  cdecl.}
proc ReadCommand_destroy*(self: ReadCommand) {.importc: "ReadCommand_destroy",
     cdecl.}
## **************************************************
##  ClockSynchronizationCommand : InformationObject
## ************************************************

type
  ClockSynchronizationCommand* = ptr sClockSynchronizationCommand

proc ClockSynchronizationCommand_create*(self: ClockSynchronizationCommand;
                                        ioa: cint; timestamp: CP56Time2a): ClockSynchronizationCommand {.
    importc: "ClockSynchronizationCommand_create",  cdecl.}
proc ClockSynchronizationCommand_destroy*(self: ClockSynchronizationCommand) {.
    importc: "ClockSynchronizationCommand_destroy",  cdecl.}
proc ClockSynchronizationCommand_getTime*(self: ClockSynchronizationCommand): CP56Time2a {.
    importc: "ClockSynchronizationCommand_getTime",  cdecl.}
## *****************************************************
##  ParameterNormalizedValue : MeasuredValueNormalized
## ***************************************************

type
  ParameterNormalizedValue* = ptr sMeasuredValueNormalized

proc ParameterNormalizedValue_destroy*(self: ParameterNormalizedValue) {.
    importc: "ParameterNormalizedValue_destroy",  cdecl.}
## *
##  \brief Create a parameter measured values, normalized (P_ME_NA_1) information object
##
##  NOTE: Can only be used in control direction (with COT=ACTIVATION) or in monitoring
##  direction as a response of an interrogation request (with COT=INTERROGATED_BY...).
##
##  Possible values of qpm:
##  0 = not used
##  1 = threshold value
##  2 = smoothing factor (filter time constant)
##  3 = low limit for transmission of measured values
##  4 = high limit for transmission of measured values
##  5..31 = reserved for standard definitions of CS101 (compatible range)
##  32..63 = reserved for special use (private range)
##
##  \param[in] self existing instance to reuse or NULL to create a new instance
##  \param[in] ioa information object address
##  \param[in] value the normalized value (-1 .. 1)
##  \param[in] qpm qualifier of measured values (\ref QualifierOfParameterMV)
##
##  \return the initialized instance
##

proc ParameterNormalizedValue_create*(self: ParameterNormalizedValue; ioa: cint;
                                     value: cfloat; qpm: QualifierOfParameterMV): ParameterNormalizedValue {.
    importc: "ParameterNormalizedValue_create",  cdecl.}
proc ParameterNormalizedValue_getValue*(self: ParameterNormalizedValue): cfloat {.
    importc: "ParameterNormalizedValue_getValue",  cdecl.}
proc ParameterNormalizedValue_setValue*(self: ParameterNormalizedValue;
                                       value: cfloat) {.
    importc: "ParameterNormalizedValue_setValue",  cdecl.}
## *
##  \brief Returns the qualifier of measured values (QPM)
##
##  \return the QPM value (\ref QualifierOfParameterMV)
##

proc ParameterNormalizedValue_getQPM*(self: ParameterNormalizedValue): QualifierOfParameterMV {.
    importc: "ParameterNormalizedValue_getQPM",  cdecl.}
## *****************************************************
##  ParameterScaledValue : MeasuredValueScaled
## ***************************************************

type
  ParameterScaledValue* = ptr sMeasuredValueScaled
